--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .tsx,.ts,.js, src",
+    "lint:fix": "eslint --fix --ext .tsx,.ts,.js, src"
   },
   "dependencies": {
     "react": "^16.12.0",
@@ -19,9 +21,17 @@
     "@babel/preset-typescript": "^7.7.7",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
