--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "eslint --ext .tsx,.ts,.js, src",
     "lint:fix": "eslint --fix --ext .tsx,.ts,.js, src"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -31,7 +36,9 @@
     "eslint-plugin-react": "^7.17.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.1.0",
     "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
