--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     }
   },
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -24,11 +26,14 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.27",
+    "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
@@ -40,6 +45,7 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.2",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
